tests/neg/param-allow.jo
import stk.IO.stdout

param newLine: String

def foo() =
  print
    "Hello, world!" + newLine

def bar() = foo

def main = bar allow stdout  // error
